src/ui/snapshots/rust_hf_downloader__ui__render__snapshot_resume_popup.snap
---
source: src/ui/render.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"               ┌Resume Incomplete Downloads?────────────────────────────────────────┐               "
"               │ Found 2 incomplete download(s):                                    │               "
"               │                                                                    │               "
"               │   • Llama-3.1-8B-Q4_K_M.gguf (25%)                                 │               "
"               │   • Qwen2.5-7B-Q8_0.gguf (50%)                                     │               "
"               │                                                                    │               "
"               │                                                                    │               "
"               │                                                                    │               "
"               │                                                                    │               "
"               │                                                                    │               "
"               │ Y to resume all  |  N to skip  |  D to delete and skip             │               "
"               └────────────────────────────────────────────────────────────────────┘               "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
