src/ui/snapshots/rust_hf_downloader__ui__render__snapshot_search_popup.snap
---
source: src/ui/render.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                    ┌ Search HuggingFace Models ───────────────────────────────┐                    "
"                    │                                                          │                    "
"                    │  llama                                                   │                    "
"                    │                                                          │                    "
"                    │                                                          │                    "
"                    │  Enter search query and press Enter to search            │                    "
"                    │  ESC: Cancel                                             │                    "
"                    └──────────────────────────────────────────────────────────┘                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
