src/ui/snapshots/rust_hf_downloader__ui__render__snapshot_search_popup_over_populated_ui.snap
---
source: src/ui/render.rs
expression: terminal.backend()
---
"┌Filters  [Click to cycle | 1-4: Presets | r: Reset | Ctrl+S: Save]────────────────────────────────┐"
"│Sort: Downloads ▼  |  Min Downloads: 0  |  Min Likes: 0  |  [No Filters]                   v<VERSION>│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Results───────────────────────────────────────────────────────────────────────────────────────────┐"
"│     1. meta-llama/Llama-3.1-8B by meta-llama ↓1.2M ♥12.3K [2024-07-03] [text-generation, llama]  │"
"│>>   2. mistralai/Mistral-7B-v0.3 by mistralai ↓987.7K ♥8.9K [text-generation]                    │"
"│     3. Qwen/Qwen2.5-Coder-32B-Instruct by Qwen ↓45.7K ♥678 [2024-11-01]                          │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                   ┌ Search HuggingFace Models ───────────────────────────────┐                   │"
"│                   │                                                          │                   │"
"└───────────────────│  llama                                                   │───────────────────┘"
"┌Quantization Types │                                                          │type]──────────────┐"
"│                   │                                                          │                   │"
"│                   │  Enter search query and press Enter to search            │                   │"
"│                   │  ESC: Cancel                                             │                   │"
"│                   └──────────────────────────────────────────────────────────┘                   │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘"
"┌Status────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Selection: 2 of 3                                                                                 │"
"│Press / to search                                                                                 │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
